[tool.poetry]
name = "klickbrick"
version = "0.1.0"
description = ""
authors = ["nickvazz <nickvazquezz@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
behave = "^1.2.6"
black = "^20.8b1"
pytest-cov = "^2.11.1"

[tool.poetry.dev-dependencies]
pytest = "^4.6"

[tool.poetry.scripts]
klickbrick = "klickbrick.cli:main"

[build-system]
requires = [
    "poetry-core>=1.0.0",
    "behave>1.2.0"
]
build-backend = "poetry.core.masonry.api"
